# CppLibraryTemplate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-WTFPL  README.md  add_sample  add_sample.bat  add_sample.py
cmake/: HelperFunctions.cmake
samples/: CMakeLists.txt
samples/Base/: main.cpp
src/: CMakeLists.txt  version.h.in
tests/: CMakeLists.txt
